--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.13.1",
     "hjs": "~0.0.6",
+    "media-typer": "^0.3.0",
     "mongoose": "^4.7.1",
     "morgan": "~1.6.1",
     "node-telegram-bot-api": "^0.24.0",
